# htimer

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  fast_api_main.py  ioc.py  main.py  noxfile.py  pyproject.toml  pytest.ini  rabbit_mq_main.py  report.html  requirements.txt
.github/workflows/: copilot.yml
application/: common_exceptions.py  common_interfaces.py
application/daily_log/: dto.py  exceptions.py  interactors.py  interfaces.py  validators.py
application/dayly-log/: dto.py  exceptions.py  interactors.py  interfaces.py  validators.py
application/project/: dto.py  interactors.py  interfaces.py  validators.py
application/reports/: dto.py  exceptions.py  interactors.py  interfaces.py
application/stage/: dto.py  exceptions.py  interactors.py  interfaces.py  validators.py
application/subscription/: dto.py  interactors.py  interfaces.py
application/task/: interactors.py  interfaces.py  validators.py
application/user/: dto.py  exceptions.py  interactors.py  interfaces.py  policy.py  validators.py
docs/: interactors_visualization.md
domain/: entities.py  services.py  value_objects.py
handlers/consumers/: __init__.py  interfaces.py  report.py
infrastructure/: hash_generator.py
infrastructure/auth/: auth.py  interfaces.py
infrastructure/db/: database.py  models.py  repositories.py
infrastructure/file_storage/: repositories.py
infrastructure/logger/: logger.py
infrastructure/policy/: user.py
ioc/: __init__.py  app.py  common.py  daily_log.py  project.py  stage.py  subscription.py  task.py  user.py  users.py
src/: cli.py
(+182 files in other folders)
