[project]
name = "htimer"
version = "0.1.0"
description = "Project tracking tool"
readme = "README.md"
requires-python = ">=3.14"
authors = [{name = "Aziz", email = "acgovii@gmail.com"}]
license = {text = "MIT"}
dependencies = [
    "aio-pika>=9.6.1",
    "alembic>=1.18.4",
    "dishka>=1.8.0",
    "emoji>=2.15.0",
    "fastapi>=0.135.1",
    "ftfy>=6.3.1",
    "minio>=7.2.20",
    "pika>=1.3.2",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "pytz>=2025.2",
    "sqlalchemy[asyncio]>=2.1.0b1",
    "typer>=0.24.1",
    "urllib3>=2.6.3",
    "uvicorn>=0.41.0",
    "yookassa>=3.10.0",
]

[project.urls]
Repository = "https://github.com/ermantraun/htimer"


[project.scripts]
fastapi-dev = "cli:dev"
fastapi-prod = "cli:prod"
consumers = "rabbit_mq_main:main"

[dependency-groups]
runtime = []
[project.optional-dependencies]
tests = ["pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "urllib3>=2.6.3",]
dev = ["htimer[tests]"]


